server/out/DaphneDSLGrammarParser.js
"use strict";
// Generated from DaphneDSLGrammar.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols
Object.defineProperty(exports, "__esModule", { value: true });
exports.BoolLiteralContext = exports.LiteralContext = exports.RangeContext = exports.IndexingContext = exports.FrameRowContext = exports.IdentifierExprContext = exports.PowExprContext = exports.CallExprContext = exports.ColMajorFrameLiteralExprContext = exports.ArgExprContext = exports.MulExprContext = exports.RowMajorFrameLiteralExprContext = exports.LiteralExprContext = exports.AddExprContext = exports.CmpExprContext = exports.ParanthesesExprContext = exports.MinusExprContext = exports.MatrixLiteralExprContext = exports.RightIdxFilterExprContext = exports.DisjExprContext = exports.ConjExprContext = exports.CondExprContext = exports.MatmulExprContext = exports.CastExprContext = exports.ModExprContext = exports.RightIdxExtractExprContext = exports.ExprContext = exports.FuncTypeDefContext = exports.FunctionRetTypesContext = exports.FunctionArgContext = exports.FunctionArgsContext = exports.ReturnStatementContext = exports.FunctionStatementContext = exports.ForStatementContext = exports.WhileStatementContext = exports.IfStatementContext = exports.AssignStatementContext = exports.ExprStatementContext = exports.BlockStatementContext = exports.ImportStatementContext = exports.StatementContext = exports.ScriptContext = void 0;
const antlr4_1 = require("antlr4");
class DaphneDSLGrammarParser extends antlr4_1.Parser {
    get grammarFileName() { return "DaphneDSLGrammar.g4"; }
    get literalNames() { return DaphneDSLGrammarParser.literalNames; }
    get symbolicNames() { return DaphneDSLGrammarParser.symbolicNames; }
    get ruleNames() { return DaphneDSLGrammarParser.ruleNames; }
    get serializedATN() { return DaphneDSLGrammarParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new antlr4_1.FailedPredicateException(this, predicate, message);
    }
    constructor(input) {
        super(input);
        this._interp = new antlr4_1.ParserATNSimulator(this, DaphneDSLGrammarParser._ATN, DaphneDSLGrammarParser.DecisionsToDFA, new antlr4_1.PredictionContextCache());
    }
    // @RuleVersion(0)
    script() {
        const localctx = new ScriptContext(this, this._ctx, this.state);
        this.enterRule(localctx, 0, DaphneDSLGrammarParser.RULE_script);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 45;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2147885188) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & 249821) !== 0)) {
                    {
                        {
                            this.state = 42;
                            this.statement();
                        }
                    }
                    this.state = 47;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 48;
                this.match(DaphneDSLGrammarParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    statement() {
        const localctx = new StatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 2, DaphneDSLGrammarParser.RULE_statement);
        try {
            this.state = 59;
            this._errHandler.sync(this);
            switch (this._interp.adaptivePredict(this._input, 1, this._ctx)) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    {
                        this.state = 50;
                        this.blockStatement();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(localctx, 2);
                    {
                        this.state = 51;
                        this.exprStatement();
                    }
                    break;
                case 3:
                    this.enterOuterAlt(localctx, 3);
                    {
                        this.state = 52;
                        this.assignStatement();
                    }
                    break;
                case 4:
                    this.enterOuterAlt(localctx, 4);
                    {
                        this.state = 53;
                        this.ifStatement();
                    }
                    break;
                case 5:
                    this.enterOuterAlt(localctx, 5);
                    {
                        this.state = 54;
                        this.whileStatement();
                    }
                    break;
                case 6:
                    this.enterOuterAlt(localctx, 6);
                    {
                        this.state = 55;
                        this.forStatement();
                    }
                    break;
                case 7:
                    this.enterOuterAlt(localctx, 7);
                    {
                        this.state = 56;
                        this.functionStatement();
                    }
                    break;
                case 8:
                    this.enterOuterAlt(localctx, 8);
                    {
                        this.state = 57;
                        this.returnStatement();
                    }
                    break;
                case 9:
                    this.enterOuterAlt(localctx, 9);
                    {
                        this.state = 58;
                        this.importStatement();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    importStatement() {
        const localctx = new ImportStatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 4, DaphneDSLGrammarParser.RULE_importStatement);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 61;
                this.match(DaphneDSLGrammarParser.KW_IMPORT);
                this.state = 62;
                localctx._filePath = this.match(DaphneDSLGrammarParser.STRING_LITERAL);
                this.state = 65;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 41) {
                    {
                        this.state = 63;
                        this.match(DaphneDSLGrammarParser.KW_AS);
                        this.state = 64;
                        localctx._alias = this.match(DaphneDSLGrammarParser.STRING_LITERAL);
                    }
                }
                this.state = 67;
                this.match(DaphneDSLGrammarParser.T__0);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    blockStatement() {
        const localctx = new BlockStatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 6, DaphneDSLGrammarParser.RULE_blockStatement);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 69;
                this.match(DaphneDSLGrammarParser.T__1);
                this.state = 73;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2147885188) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & 249821) !== 0)) {
                    {
                        {
                            this.state = 70;
                            this.statement();
                        }
                    }
                    this.state = 75;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 76;
                this.match(DaphneDSLGrammarParser.T__2);
                this.state = 78;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 1) {
                    {
                        this.state = 77;
                        this.match(DaphneDSLGrammarParser.T__0);
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    exprStatement() {
        const localctx = new ExprStatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 8, DaphneDSLGrammarParser.RULE_exprStatement);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 80;
                this.expr(0);
                this.state = 81;
                this.match(DaphneDSLGrammarParser.T__0);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    assignStatement() {
        const localctx = new AssignStatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 10, DaphneDSLGrammarParser.RULE_assignStatement);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 87;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
                while (_alt !== 2 && _alt !== antlr4_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 83;
                                this.match(DaphneDSLGrammarParser.IDENTIFIER);
                                this.state = 84;
                                this.match(DaphneDSLGrammarParser.T__3);
                            }
                        }
                    }
                    this.state = 89;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
                }
                this.state = 90;
                this.match(DaphneDSLGrammarParser.IDENTIFIER);
                this.state = 92;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 31) {
                    {
                        this.state = 91;
                        this.indexing();
                    }
                }
                this.state = 108;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === 5) {
                    {
                        {
                            this.state = 94;
                            this.match(DaphneDSLGrammarParser.T__4);
                            this.state = 99;
                            this._errHandler.sync(this);
                            _alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
                            while (_alt !== 2 && _alt !== antlr4_1.ATN.INVALID_ALT_NUMBER) {
                                if (_alt === 1) {
                                    {
                                        {
                                            this.state = 95;
                                            this.match(DaphneDSLGrammarParser.IDENTIFIER);
                                            this.state = 96;
                                            this.match(DaphneDSLGrammarParser.T__3);
                                        }
                                    }
                                }
                                this.state = 101;
                                this._errHandler.sync(this);
                                _alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
                            }
                            this.state = 102;
                            this.match(DaphneDSLGrammarParser.IDENTIFIER);
                            this.state = 104;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                            if (_la === 31) {
                                {
                                    this.state = 103;
                                    this.indexing();
                                }
                            }
                        }
                    }
                    this.state = 110;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 111;
                this.match(DaphneDSLGrammarParser.T__5);
                this.state = 112;
                this.expr(0);
                this.state = 113;
                this.match(DaphneDSLGrammarParser.T__0);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    ifStatement() {
        const localctx = new IfStatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 12, DaphneDSLGrammarParser.RULE_ifStatement);
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 115;
                this.match(DaphneDSLGrammarParser.KW_IF);
                this.state = 116;
                this.match(DaphneDSLGrammarParser.T__6);
                this.state = 117;
                localctx._cond = this.expr(0);
                this.state = 118;
                this.match(DaphneDSLGrammarParser.T__7);
                this.state = 119;
                localctx._thenStmt = this.statement();
                this.state = 122;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 10, this._ctx)) {
                    case 1:
                        {
                            this.state = 120;
                            this.match(DaphneDSLGrammarParser.KW_ELSE);
                            this.state = 121;
                            localctx._elseStmt = this.statement();
                        }
                        break;
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    whileStatement() {
        const localctx = new WhileStatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 14, DaphneDSLGrammarParser.RULE_whileStatement);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 139;
                this._errHandler.sync(this);
                switch (this._input.LA(1)) {
                    case 35:
                        {
                            this.state = 124;
                            this.match(DaphneDSLGrammarParser.KW_WHILE);
                            this.state = 125;
                            this.match(DaphneDSLGrammarParser.T__6);
                            this.state = 126;
                            localctx._cond = this.expr(0);
                            this.state = 127;
                            this.match(DaphneDSLGrammarParser.T__7);
                            this.state = 128;
                            localctx._bodyStmt = this.statement();
                        }
                        break;
                    case 36:
                        {
                            this.state = 130;
                            this.match(DaphneDSLGrammarParser.KW_DO);
                            this.state = 131;
                            localctx._bodyStmt = this.statement();
                            this.state = 132;
                            this.match(DaphneDSLGrammarParser.KW_WHILE);
                            this.state = 133;
                            this.match(DaphneDSLGrammarParser.T__6);
                            this.state = 134;
                            localctx._cond = this.expr(0);
                            this.state = 135;
                            this.match(DaphneDSLGrammarParser.T__7);
                            this.state = 137;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                            if (_la === 1) {
                                {
                                    this.state = 136;
                                    this.match(DaphneDSLGrammarParser.T__0);
                                }
                            }
                        }
                        break;
                    default:
                        throw new antlr4_1.NoViableAltException(this);
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    forStatement() {
        const localctx = new ForStatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 16, DaphneDSLGrammarParser.RULE_forStatement);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 141;
                this.match(DaphneDSLGrammarParser.KW_FOR);
                this.state = 142;
                this.match(DaphneDSLGrammarParser.T__6);
                this.state = 143;
                localctx._var_ = this.match(DaphneDSLGrammarParser.IDENTIFIER);
                this.state = 144;
                this.match(DaphneDSLGrammarParser.KW_IN);
                this.state = 145;
                localctx._from_ = this.expr(0);
                this.state = 146;
                this.match(DaphneDSLGrammarParser.T__8);
                this.state = 147;
                localctx._to = this.expr(0);
                this.state = 150;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 9) {
                    {
                        this.state = 148;
                        this.match(DaphneDSLGrammarParser.T__8);
                        this.state = 149;
                        localctx._step = this.expr(0);
                    }
                }
                this.state = 152;
                this.match(DaphneDSLGrammarParser.T__7);
                this.state = 153;
                localctx._bodyStmt = this.statement();
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    functionStatement() {
        const localctx = new FunctionStatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 18, DaphneDSLGrammarParser.RULE_functionStatement);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 155;
                this.match(DaphneDSLGrammarParser.KW_DEF);
                this.state = 156;
                localctx._name = this.match(DaphneDSLGrammarParser.IDENTIFIER);
                this.state = 157;
                this.match(DaphneDSLGrammarParser.T__6);
                this.state = 159;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 50) {
                    {
                        this.state = 158;
                        localctx._args = this.functionArgs();
                    }
                }
                this.state = 161;
                this.match(DaphneDSLGrammarParser.T__7);
                this.state = 164;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 10) {
                    {
                        this.state = 162;
                        this.match(DaphneDSLGrammarParser.T__9);
                        this.state = 163;
                        localctx._retTys = this.functionRetTypes();
                    }
                }
                this.state = 166;
                localctx._bodyStmt = this.blockStatement();
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    returnStatement() {
        const localctx = new ReturnStatementContext(this, this._ctx, this.state);
        this.enterRule(localctx, 20, DaphneDSLGrammarParser.RULE_returnStatement);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 168;
                this.match(DaphneDSLGrammarParser.KW_RETURN);
                this.state = 177;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2147885188) !== 0) || ((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 3847) !== 0)) {
                    {
                        this.state = 169;
                        this.expr(0);
                        this.state = 174;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while (_la === 5) {
                            {
                                {
                                    this.state = 170;
                                    this.match(DaphneDSLGrammarParser.T__4);
                                    this.state = 171;
                                    this.expr(0);
                                }
                            }
                            this.state = 176;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                    }
                }
                this.state = 179;
                this.match(DaphneDSLGrammarParser.T__0);
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    functionArgs() {
        const localctx = new FunctionArgsContext(this, this._ctx, this.state);
        this.enterRule(localctx, 22, DaphneDSLGrammarParser.RULE_functionArgs);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 181;
                this.functionArg();
                this.state = 186;
                this._errHandler.sync(this);
                _alt = this._interp.adaptivePredict(this._input, 18, this._ctx);
                while (_alt !== 2 && _alt !== antlr4_1.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        {
                            {
                                this.state = 182;
                                this.match(DaphneDSLGrammarParser.T__4);
                                this.state = 183;
                                this.functionArg();
                            }
                        }
                    }
                    this.state = 188;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 18, this._ctx);
                }
                this.state = 190;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 5) {
                    {
                        this.state = 189;
                        this.match(DaphneDSLGrammarParser.T__4);
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    functionArg() {
        const localctx = new FunctionArgContext(this, this._ctx, this.state);
        this.enterRule(localctx, 24, DaphneDSLGrammarParser.RULE_functionArg);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 192;
                localctx._var_ = this.match(DaphneDSLGrammarParser.IDENTIFIER);
                this.state = 195;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 9) {
                    {
                        this.state = 193;
                        this.match(DaphneDSLGrammarParser.T__8);
                        this.state = 194;
                        localctx._ty = this.funcTypeDef();
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    functionRetTypes() {
        const localctx = new FunctionRetTypesContext(this, this._ctx, this.state);
        this.enterRule(localctx, 26, DaphneDSLGrammarParser.RULE_functionRetTypes);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 197;
                this.funcTypeDef();
                this.state = 202;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === 5) {
                    {
                        {
                            this.state = 198;
                            this.match(DaphneDSLGrammarParser.T__4);
                            this.state = 199;
                            this.funcTypeDef();
                        }
                    }
                    this.state = 204;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    funcTypeDef() {
        const localctx = new FuncTypeDefContext(this, this._ctx, this.state);
        this.enterRule(localctx, 28, DaphneDSLGrammarParser.RULE_funcTypeDef);
        let _la;
        try {
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 212;
                this._errHandler.sync(this);
                switch (this._input.LA(1)) {
                    case 45:
                        {
                            this.state = 205;
                            localctx._dataTy = this.match(DaphneDSLGrammarParser.DATA_TYPE);
                            this.state = 209;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                            if (_la === 11) {
                                {
                                    this.state = 206;
                                    this.match(DaphneDSLGrammarParser.T__10);
                                    this.state = 207;
                                    localctx._elTy = this.match(DaphneDSLGrammarParser.VALUE_TYPE);
                                    this.state = 208;
                                    this.match(DaphneDSLGrammarParser.T__11);
                                }
                            }
                        }
                        break;
                    case 46:
                        {
                            this.state = 211;
                            localctx._scalarTy = this.match(DaphneDSLGrammarParser.VALUE_TYPE);
                        }
                        break;
                    default:
                        throw new antlr4_1.NoViableAltException(this);
                }
            }
        }
        catch (re) {
            if (re instanceof antlr4_1.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localctx;
    }
    // @RuleVersion(0)
    expr(_p) {
        if (_p === undefined) {
            _p = 0;
        }
        const _parentctx = this._ctx;
        const _parentState = this.state;
        let localctx = new ExprContext(this, this._ctx, _parentState);
        let _prevctx = localctx;
        const _startState = 30;
        this.enterRecursionRule(localctx, 30, DaphneDSLGrammarParser.RULE_expr, _p);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(localctx, 1);
            {
                this.state = 323;
                this._errHandler.sync(this);
                switch (this._interp.adaptivePredict(this._input, 38, this._ctx)) {
                    case 1:
                        {
                            localctx = new LiteralExprContext(this, localctx);
                            this._ctx = localctx;
                            _prevctx = localctx;
                            this.state = 215;
                            this.literal();
                        }
                        break;
                    case 2:
                        {
                            localctx = new ArgExprContext(this, localctx);
                            this._ctx = localctx;
                            _prevctx = localctx;
                            this.state = 216;
                            this.match(DaphneDSLGrammarParser.T__12);
                            this.state = 217;
                            localctx._arg = this.match(DaphneDSLGrammarParser.IDENTIFIER);
                        }
                        break;
                    case 3:
                        {
                            localctx = new IdentifierExprContext(this, localctx);
                            this._ctx = localctx;
                            _prevctx = localctx;
                            {
                                this.state = 222;
                                this._errHandler.sync(this);
                                _alt = this._interp.adaptivePredict(this._input, 24, this._ctx);
                                while (_alt !== 2 && _alt !== antlr4_1.ATN.INVALID_ALT_NUMBER) {
                                    if (_alt === 1) {
                                        {
                                            {
                                                this.state = 218;
                                                this.match(DaphneDSLGrammarParser.IDENTIFIER);
                                                this.state = 219;
                                                this.match(DaphneDSLGrammarParser.T__3);
                                            }
                                        }
                                    }
                                    this.state = 224;
                                    this._errHandler.sync(this);
                                    _alt = this._interp.adaptivePredict(this._input, 24, this._ctx);
                                }
                                this.state = 225;
                                this.match(DaphneDSLGrammarParser.IDENTIFIER);
                            }
                        }
                        break;
                    case 4:
                        {
                            localctx = new ParanthesesExprContext(this, localctx);
                            this._ctx = localctx;
                            _prevctx = localctx;
                            this.state = 226;
                            this.match(DaphneDSLGrammarParser.T__6);
                            this.state = 227;
                            this.expr(0);
                            this.state = 228;
                            this.match(DaphneDSLGrammarParser.T__7);
                        }
                        break;
                    case 5:
                        {
                            localctx = new CallExprContext(this, localctx);
                            this._ctx = localctx;
                            _prevctx = localctx;
                            this.state = 234;
                            this._errHandler.sync(this);
                            _alt = this._interp.adaptivePredict(this._input, 25, this._ctx);
                            while (_alt !== 2 && _alt !== antlr4_1.ATN.INVALID_ALT_NUMBER) {
